Fix Delete and Find - Change some fields to allow partial, some not allow partial - Fix bugs on finding full name - Update the UG